cleaning up code stage 1

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-8 col-md-12 hero-black">
-          <img class="logo" src="images/Y7logo.png" alt="">
+          <img class="logo" src="./images/Y7logo.png" alt="">
           <h1 class="hero-title">We Connect Business Objectives With User Focused Goals That Deliver Measurable Results.</h1>
           <p class="hero-description">find out how Y&7 can help you deliver on client expectations as we drive your business to success.</p>
           <a href="#results"><i class="fas fa-chevron-down icon-white"></i></a>
@@ -34,7 +34,7 @@
           </div>
         </div>
       </div>
-      <img class="hero-img" src="images/Mask.png" alt="">
+      <img class="hero-img" src="./images/Mask.png" alt="">
     </div>
 
   </section>
@@ -119,9 +119,9 @@
         </div>
         <div class="col-lg-6 pod-background">
           <div class="img-container">
-            <img class="profile-img" src="images/profile.png" alt="">
-            <img class="wall-img" src="images/wall.png" alt="">
-            <img class="onboarding-img" src="images/onboarding.png" alt="">
+            <img class="profile-img" src="./images/profile.png" alt="">
+            <img class="wall-img" src="./images/wall.png" alt="">
+            <img class="onboarding-img" src="./images/onboarding.png" alt="">
           </div>
         </div>
       </div>
@@ -134,9 +134,9 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-6 img-container">
-          <img class="gradient-rectangle" src="images/Rectangle.png" alt="">
+          <img class="gradient-rectangle" src="./images/Rectangle.png" alt="">
           <div class="devon-img">
-            <img src="images/Newsletter.png" alt="">
+            <img src="./images/Newsletter.png" alt="">
           </div>
 
 
@@ -215,7 +215,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-4 offset-lg-2">
-          <img class="computer-img" src="images/computer.png" alt="">
+          <img class="computer-img" src="./images/computer.png" alt="">
         </div>
         <div class="col-lg-4">
           <h3>ABOUT US</h3>
@@ -235,7 +235,7 @@
       <div class="footer-container">
         <div class="row">
           <div class="col-lg-5 offset-lg-2 footer-black-bg">
-            <img class="footer-logo" src="images/Y7logo.png" alt="Y7logo">
+            <img class="footer-logo" src="./images/Y7logo.png" alt="Y7logo">
             <div class="address">
               <p>Acorn House</p>
               <p>8a Looms Lane</p>
@@ -252,7 +252,7 @@
             <div class="news-container">
               <h5>Keep up to date with upcoming news</h5>
                 <form class="" action="index.html" method="post">
-                <input class="emailfield" type="text" name="" value="ENTER YOUR EMAIL">
+                <input class="email-address" type="email" name="" value="ENTER YOUR EMAIL">
                 <button class="btn submit-btn">
                   <i class="fas fa-arrow-alt-circle-right"></i>
                 </button>
