corrected image names for Pod section

--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
         </div>
         <div class="col-lg-6 pod-background">
           <div class="img-container">
-            <img class="profile-img" src="./images/profile.png" alt="">
-            <img class="wall-img" src="./images/wall.png" alt="">
-            <img class="onboarding-img" src="./images/onboarding.png" alt="">
+            <img class="profile-img" src="./images/Profile.png" alt="">
+            <img class="wall-img" src="./images/Wall.png" alt="">
+            <img class="onboarding-img" src="./images/Onboarding.png" alt="">
           </div>
         </div>
       </div>
