--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Y&7 website - created by Andrew Deacon, April 2021 -->
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
@@ -25,7 +26,7 @@
         <div class="col-lg-8 col-md-12 hero-black">
           <img class="logo" src="./images/Y7logo.png" alt="">
           <h1 class="hero-title">We Connect Business Objectives With User Focused Goals That Deliver Measurable Results.</h1>
-          <p class="hero-description">find out how Y&7 can help you deliver on client expectations as we drive your business to success.</p>
+          <p class="hero-description">find out how Y&7 can help you deliver on client expectations as we drive your business to success</p>
           <a href="#results"><i class="fas fa-chevron-down icon-white"></i></a>
         </div>
         <div class="col-lg-4 col-md-12">
@@ -36,14 +37,13 @@
       </div>
       <img class="hero-img" src="./images/Mask.png" alt="">
     </div>
-
   </section>
 
   <section id="results">
 
     <h3>DELIVERING RESULTS</h3>
     <div class="container-fluid results-container">
-      <h2>An agency that takes an in-depth look at your business, sets targets and won’t rest until you’re moving forward.</h2>
+      <h2>An agency that takes an in-depth look at your business, sets targets and won’t rest until you’re moving forward</h2>
       <p class="results-description">We collaborate, solve problems, invest in our team, have a commercial perspective and genuinely care about our clients. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
         labore et dolore magna
         aliqua. </p>
@@ -61,7 +61,6 @@
             <p class="selling-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
         </button>
-
         <button id="selling-point-container2" class="sell-btn col-lg-2 offset-lg-2">
           <p class="sb-number">02</p>
           <div class="selling-text-container">
@@ -88,17 +87,12 @@
           <p id="position"></p>
         </div>
       </div>
-
     </div>
-
-
-
   </section>
 
   <!-- The Pod section -->
 
   <section id="pod">
-
     <div class="container-fluid">
       <div class="row pod-container">
         <div class="col-lg-4 offset-lg-2">
@@ -126,11 +120,9 @@
         </div>
       </div>
     </div>
-
   </section>
 
   <section id="devon">
-
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-6 img-container">
@@ -138,8 +130,6 @@
           <div class="devon-img">
             <img src="./images/Newsletter.png" alt="">
           </div>
-
-
         </div>
         <div class="col-lg-4 devon-text">
           <h3>DEVON CARERS</h3>
@@ -159,8 +149,6 @@
         </div>
       </div>
     </div>
-
-
   </section>
 
   <section id="expertise">
@@ -208,7 +196,6 @@
         </div>
       </div>
     </div>
-
   </section>
 
   <section id="about">
@@ -219,15 +206,13 @@
         </div>
         <div class="col-lg-4">
           <h3>ABOUT US</h3>
-          <h2>Founded in 2018, Y&7 are an award-winning full-service user research agency based in Suffolk.</h2>
+          <h2>Founded in 2018, Y&7 are an award-winning full-service user research agency based in Suffolk</h2>
           <p>Our team of integrated marketing experts offer a powerful blend of integrated marketing services including Marketing and Business Consultancy, Web Development, Branding, Design, UX & CRO, Technical SEO, PPC Advertising, Social Media,
             Email,
             PR, Content and Video Marketing.</p>
         </div>
       </div>
     </div>
-
-
   </section>
 
   <footer id="footer">
@@ -252,7 +237,7 @@
             <div class="news-container">
               <h5>Keep up to date with upcoming news</h5>
                 <form class="" action="index.html" method="post">
-                <input class="email-address" type="email" name="" value="ENTER YOUR EMAIL">
+                <input class="email-address" type="email" name="" placeholder="enter your email">
                 <button class="btn submit-btn">
                   <i class="fas fa-arrow-alt-circle-right"></i>
                 </button>
@@ -269,5 +254,4 @@
   <!-- javascript for buttons behaviour and review selectors -->
   <script src="./app.js"></script>
 </body>
-
 </html>
