--- a/contact.html
+++ b/contact.html
@@ -20,54 +20,56 @@
 <body>
 
   <div class="container contact">
-  	<div class="row">
-  		<div class="col-md-3">
-  			<div class="contact-info">
-  				<img src="./images/Y7logo.png" alt="image"/>
-  				<h2>Contact Us</h2>
-  				<h4>We would love to hear from you</h4>
-  			</div>
-  		</div>
-  		<div class="col-md-9">
-  			<div class="contact-form">
-  				<div class="form-group">
-  				  <label class="control-label col-sm-2" for="fname">First Name:</label>
-  				  <div class="col-sm-10">
-  					<input type="text" class="form-control" id="fname" placeholder="Enter First Name" name="fname" required>
-  				  </div>
-  				</div>
-  				<div class="form-group">
-  				  <label class="control-label col-sm-2" for="lname">Last Name:</label>
-  				  <div class="col-sm-10">
-  					<input type="text" class="form-control" id="lname" placeholder="Enter Last Name" name="lname" required>
-  				  </div>
-  				</div>
-          <div class="form-group">
-  				  <label class="control-label col-sm-2" for="company">Company:</label>
-  				  <div class="col-sm-10">
-  					<input type="text" class="form-control" id="company" placeholder="Enter Your Company Name" name="company" required>
-  				  </div>
-  				</div>
-  				<div class="form-group">
-  				  <label class="control-label col-sm-2" for="email">Email:</label>
-  				  <div class="col-sm-10">
-  					<input type="email" class="form-control" id="email" placeholder="Enter email" name="email" required>
-  				  </div>
-  				</div>
-  				<div class="form-group">
-  				  <label class="control-label col-sm-2" for="comment">Comment:</label>
-  				  <div class="col-sm-10">
-  					<textarea class="form-control" rows="5" id="comment"></textarea>
-  				  </div>
-  				</div>
-  				<div class="form-group">
-  				  <div class="col-sm-offset-2 col-sm-10">
-  					<button type="submit" action="./index.html" class="btn btn-default submit">Submit</button>
-  				  </div>
-  				</div>
-  			</div>
-  		</div>
-  	</div>
+    <form class="" action="./message.html" method="post">
+      <div class="row">
+        <div class="col-md-3 left-panel">
+          <div class="contact-info">
+            <img src="./images/Y7logo.png" alt="image" />
+            <h2>Contact Us</h2>
+            <h4>We would love to hear from you</h4>
+          </div>
+        </div>
+        <div class="col-md-9 right-panel">
+          <div class="contact-form">
+            <div class="form-group">
+              <label class="control-label col-sm-2" for="fname">First Name:</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" id="fname" placeholder="Enter First Name" name="fname" required>
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="control-label col-sm-2" for="lname">Last Name:</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" id="lname" placeholder="Enter Last Name" name="lname" required>
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="control-label col-sm-2" for="company">Company:</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" id="company" placeholder="Enter Your Company Name" name="company">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="control-label col-sm-2" for="email">Email:</label>
+              <div class="col-sm-10">
+                <input type="email" class="form-control" id="email" placeholder="Enter email" name="email" required>
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="control-label col-sm-2" for="comment">Comment:</label>
+              <div class="col-sm-10">
+                <textarea class="form-control" rows="5" id="comment"></textarea>
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="col-sm-offset-2 col-sm-10">
+                <button type="submit" action="./index.html" class="btn btn-default submit">Submit</button>
+              </div>
+            </div>
+          </div>
+        </div>
+    </form>
+  </div>
   </div>
   <!-- jQuery script -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
